--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-rate-limit": "^6.3.0",
+    "http": "0.0.1-security",
+    "socket.io": "^4.4.1",
     "sudoku": "0.0.3"
   }
 }
